--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,108 @@
-.multiplicant {
+body{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+#main{
+    flex: 0 0 70%;
+    width: 100vw;
+    height: 100vh;
+    margin: 0%;
+    padding: 1rem;
+    width: 50vw;
+    height: 90vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr  ;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+    grid-template-areas:
+    ". . . . . . . "
+    ". multiplicant multiplicant . . . . "
+    ". . . . . . . "
+    ". alu alu  . multiplier multiplier . "
+    ". . . . . . . "
+    ". product product . control control . "
+    ". . . . . . . "
+    ;
+}
+.multiplicant{
+    grid-area: multiplicant;
     border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    align-items: center;
+    
+}
+.multiplier{
+    grid-area: multiplier;
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    align-items: center;
+
+}
+.product{
+    grid-area: product;
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    align-items: center;
+
+}
+.control{
+    grid-area: control;
+    border: 1px solid red;
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    align-items: center;
+    border-radius: 50%;
+    
+}
+.alu{
+    grid-area: alu;
+    clip-path: polygon(49% 32%, 60% 0, 100% 0, 78% 100%, 25% 100%, 0 0, 36% 0);
+    width: 100%;
+    height: 100%; 
+    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    align-items: center;
+    margin: 0%;
+    padding: 0%;
+}
+.container{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+    border: 1px solid black;
+    padding: 10rem;
+    background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
+
+}
+.form-group{
+    display:flex ;
+    gap: 2rem;
+    font-size: 1.8rem;
+}
+.custom-dropdown{
+    display: flex;
+    gap: 2rem;
+}
+.form-button{
+    padding: .5rem;
+}
+.input{
+    font-size: 1rem;
 }
