--- a/pages/divider-optimized/style.css
+++ b/pages/divider-optimized/style.css
@@ -93,6 +93,10 @@ body {
     border: 2px solid #0000A5;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
+    position: absolute;
+    top: 87%;
+    right: 40%;
+    padding: 1rem 4rem 1rem 4rem;
 }
 
 #undo {
@@ -101,6 +105,10 @@ body {
     border: 2px solid #0000A5;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
+    position: absolute;
+    top: 87%;
+    right: 50%;
+    padding: 1rem 4rem 1rem 4rem;
 }
 
 
@@ -109,7 +117,11 @@ body {
     background-color: #659EC7;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
-    border: 2px solid #0000A5
+    border: 2px solid #0000A5;
+    position: absolute;
+    top: 87%;
+    left: 20%;
+    padding: 1rem 4rem 1rem 4rem;
 }
 
 #conclude {
@@ -117,7 +129,11 @@ body {
     background-color: #659EC7;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
-    border: 2px solid #0000A5
+    border: 2px solid #0000A5;
+    position: absolute;
+    top: 87%;
+    left: 30%;
+    padding: 1rem 3rem 1rem 3rem;
 }
 
 #do:hover, #undo:hover, #conclude:hover, #reset:hover{
