--- a/pages/divider/style.css
+++ b/pages/divider/style.css
@@ -100,6 +100,10 @@ body {
     border: 2px solid #0000A5;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
+    position: absolute;
+    top: 87%;
+    right: 40%;
+    padding: 1rem 4rem 1rem 4rem;
 }
 
 #undo {
@@ -108,6 +112,10 @@ body {
     border: 2px solid #0000A5;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
+    position: absolute;
+    top: 87%;
+    right: 50%;
+    padding: 1rem 4rem 1rem 4rem;
 }
 
 
@@ -116,7 +124,11 @@ body {
     background-color: #659EC7;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
-    border: 2px solid #0000A5
+    border: 2px solid #0000A5;
+    position: absolute;
+    top: 87%;
+    left: 20%;
+    padding: 1rem 4rem 1rem 4rem;
 }
 
 #conclude {
@@ -124,7 +136,11 @@ body {
     background-color: #659EC7;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
-    border: 2px solid #0000A5
+    border: 2px solid #0000A5;
+    position: absolute;
+    top: 87%;
+    left: 30%;
+    padding: 1rem 3rem 1rem 3rem;
 }
 
 #do:hover, #undo:hover, #conclude:hover, #reset:hover{
