--- a/pages/multiplier-optimized/style.css
+++ b/pages/multiplier-optimized/style.css
@@ -93,6 +93,11 @@ body {
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
     border: 2px solid #0000A5;
+    position: absolute;
+    top: 87%;
+    right: 40%;
+    padding: 1rem 4rem 1rem 4rem;
+
 }
 
 #undo {
@@ -101,6 +106,10 @@ body {
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
     border: 2px solid #0000A5;
+    position: absolute;
+    top: 87%;
+    right: 50%;
+    padding: 1rem 4rem 1rem 4rem;
 }
 
 #reset {
@@ -108,7 +117,12 @@ body {
     background-color: #659EC7;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
-    border: 2px solid #0000A5
+    border: 2px solid #0000A5;
+    position: absolute;
+    top: 87%;
+    left: 20%;
+    padding: 1rem 4rem 1rem 4rem;
+    
 }
 
 #conclude {
@@ -116,7 +130,11 @@ body {
     background-color: #659EC7;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
-    border: 2px solid #0000A5
+    border: 2px solid #0000A5;
+    position: absolute;
+    top: 87%;
+    left: 30%;
+    padding: 1rem 3rem 1rem 3rem;
 }
 
 #do:hover, #undo:hover, #conclude:hover, #reset:hover{
